--- a/TODO.txt
+++ b/TODO.txt
@@ -2,17 +2,16 @@ Required Features:
     [X] Implement CardT
     [X] Implement ArrayT
     [X] Assign a deck of cards with a generic type.
-    [ ] *Implement Array2T
+    [X] Implement Array2T
         [X] Add formatted output.
-        [ ] Add a hidden array ( cards that are covered. )
-        [ ] Add a data array ( holds the actual data. )
+        [X] Add a hidden array ( cards that are covered. )
+        [X] Add a data array ( holds the actual data. )
     [ ] Test Games
-        [ ] StringGame
-        [ ] IntGame
+        [X] StringGame
+        [X] IntGame
         [ ] AbilityGame
 
 Optional Features:
     [X] ArrayT shuffle method.
     [X] ArrayT shuffle method with depth.
-    [ ] Overloading insertion stream ( >> ) operator.
-    [ ] Overloading comparison ( == ) operator.
+    [ ] Improved interface.
